--- a/family.html
+++ b/family.html
@@ -156,9 +156,9 @@
         <h2>FAMILY</h2>
         <p>My family means the world to me. We share a bond that is filled with love, support, and countless cherished memories. Below are some of our favorite family photos.</p>
         <div class="image-container">
-            <img src="family1.jpeg" alt="Family Photo 1">
-            <img src="family2.jpeg" alt="Family Photo 2">
-            <img src="family3.jpeg" alt="Family Photo 3">
+            <img src="Family1.jpeg" alt="Family Photo 1">
+            <img src="Family2.jpeg" alt="Family Photo 2">
+            <img src="Family3.jpeg" alt="Family Photo 3">
         </div>
     </section>
 
