--- a/education.html
+++ b/education.html
@@ -141,7 +141,7 @@
     <section id="EDUCATION">
         <h2>EDUCATION</h2>
         <div class="image-container">
-            <img src="Logo of SK Hamzah 1.JPG" alt="Logo of SK Hamzah 1" title="SK Hamzah 1">
+            <img src="LOGO SK Hamzah 1.JPG" alt="Logo of SK Hamzah 1" title="SK Hamzah 1">
             <img src="LOGO SK H2.jpg" alt="Logo of SK Hamzah 2" title="SK Hamzah 2">
             <img src="LOGO MENENGAH HAMZAH 2.png" alt="Logo of SMK Hamzah 2" title="SMK Hamzah 2">
             <img src="uitm.jpg" alt="Logo of Universiti Teknologi MARA" title="Universiti Teknologi MARA">
